force-app/main/default/objects/Revenue_Contract__c/Revenue_Contract__c.object-meta.xml
<CustomObject>
    <label>Revenue Contract</label>
    <nameField>
        <label>Revenue Contract Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>