force-app/main/default/objects/Revenue_Contract__c/fields/Air_Rank__c.field-meta.xml
<CustomField>
    <fullName>Air_Rank__c</fullName>
    <label>Air Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>