force-app/main/default/objects/Revenue_Contract__c/fields/Allocation_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Treatment__c</fullName>
    <label>Allocation Treatment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>