force-app/main/default/objects/Revenue_Contract__c/fields/Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billed_Amount__c</fullName>
    <label>Billed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>