force-app/main/default/objects/Revenue_Contract__c/fields/Carves_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Carves_Currency_Code__c</fullName>
    <label>Carves Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>