force-app/main/default/objects/Revenue_Contract__c/fields/Carves_Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Carves_Currency_Type__c</fullName>
    <label>Carves Currency Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transaction</fullName>
            </value>
            <value>
                <fullName>Functional</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>