force-app/main/default/objects/Revenue_Contract__c/fields/Carves_In__c.field-meta.xml
<CustomField>
    <fullName>Carves_In__c</fullName>
    <label>Carves In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>