force-app/main/default/objects/Revenue_Contract__c/fields/Carves_Out__c.field-meta.xml
<CustomField>
    <fullName>Carves_Out__c</fullName>
    <label>Carves Out</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>