force-app/main/default/objects/Revenue_Contract__c/fields/Contract_Created_Period__c.field-meta.xml
<CustomField>
    <fullName>Contract_Created_Period__c</fullName>
    <label>Contract Created Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>