force-app/main/default/objects/Revenue_Contract__c/fields/Contract_Modified_Period__c.field-meta.xml
<CustomField>
    <fullName>Contract_Modified_Period__c</fullName>
    <label>Contract Modified Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>