force-app/main/default/objects/Revenue_Contract__c/fields/Current_Qtr_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Qtr_Revenue__c</fullName>
    <label>Current Qtr Revenue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>