force-app/main/default/objects/Revenue_Contract__c/fields/Customer_Guid_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Guid_ID__c</fullName>
    <label>Customer Guid ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>