force-app/main/default/objects/Revenue_Contract__c/fields/From_Period__c.field-meta.xml
<CustomField>
    <fullName>From_Period__c</fullName>
    <label>From Period</label>
    <length>18</length>
    <type>Text</type>
</CustomField>