force-app/main/default/objects/Revenue_Contract__c/fields/Grouping_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Identifier__c</fullName>
    <label>Grouping Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>