force-app/main/default/objects/Revenue_Contract__c/fields/Grouping_Value__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Value__c</fullName>
    <label>Grouping Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>