force-app/main/default/objects/Revenue_Contract__c/fields/Hold_Flag__c.field-meta.xml
<CustomField>
    <fullName>Hold_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold Flag</label>
    <type>Checkbox</type>
</CustomField>