force-app/main/default/objects/Revenue_Contract__c/fields/Hold_Status__c.field-meta.xml
<CustomField>
    <fullName>Hold_Status__c</fullName>
    <formula>IF(Hold_Flag__c,
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hold Status</label>
    <type>Text</type>
</CustomField>