force-app/main/default/objects/Revenue_Contract__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>