force-app/main/default/objects/Revenue_Contract__c/fields/Manual_Journal_Id__c.field-meta.xml
<CustomField>
    <fullName>Manual_Journal_Id__c</fullName>
    <label>Manual Journal Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>