force-app/main/default/objects/Revenue_Contract__c/fields/MJE_Processed__c.field-meta.xml
<CustomField>
    <fullName>MJE_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MJE Processed</label>
    <type>Checkbox</type>
</CustomField>