force-app/main/default/objects/Revenue_Contract__c/fields/Next_Qtr_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Next_Qtr_Revenue__c</fullName>
    <label>Next Qtr Revenue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>