force-app/main/default/objects/Revenue_Contract__c/fields/Prior_Revision__c.field-meta.xml
<CustomField>
    <fullName>Prior_Revision__c</fullName>
    <label>Prior Revision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>