force-app/main/default/objects/Revenue_Contract__c/fields/RC_Position__c.field-meta.xml
<CustomField>
    <fullName>RC_Position__c</fullName>
    <label>RC Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract_Asset</fullName>
                <label>Contract Asset</label>
            </value>
            <value>
                <fullName>Contract_Liability</fullName>
                <label>Contract Liability</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>