force-app/main/default/objects/Revenue_Contract__c/fields/Rc_Position_Value__c.field-meta.xml
<CustomField>
    <fullName>Rc_Position_Value__c</fullName>
    <label>RC Position Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>