force-app/main/default/objects/Revenue_Contract__c/fields/RC_Stage__c.field-meta.xml
<CustomField>
    <fullName>RC_Stage__c</fullName>
    <label>Revenue Contract Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>