force-app/main/default/objects/Revenue_Contract__c/fields/Revenue_Contract_GUID__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract_GUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Revenue Contract GUID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>