force-app/main/default/objects/Revenue_Contract__c/fields/Revenue_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Scheduled__c</fullName>
    <label>Revenue Planned</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>