force-app/main/default/objects/Revenue_Contract__c/fields/Revenue_Unscheduled__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Unscheduled__c</fullName>
    <label>Revenue Unplanned</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>