force-app/main/default/objects/Revenue_Contract__c/fields/Revision_Within_Initial_Period__c.field-meta.xml
<CustomField>
    <fullName>Revision_Within_Initial_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revision Within Initial Period</label>
    <type>Checkbox</type>
</CustomField>