force-app/main/default/objects/Revenue_Contract__c/fields/RR_Grouping_Json__c.field-meta.xml
<CustomField>
    <fullName>RR_Grouping_Json__c</fullName>
    <label>Grouping Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>