force-app/main/default/objects/Revenue_Contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identify Contract</fullName>
            </value>
            <value>
                <fullName>Identify POB&apos;s</fullName>
            </value>
            <value>
                <fullName>Calculate Transaction Price</fullName>
            </value>
            <value>
                <fullName>Allocate Transaction Price</fullName>
            </value>
            <value>
                <fullName>Recognize Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>