force-app/main/default/objects/Revenue_Contract__c/fields/To_Period__c.field-meta.xml
<CustomField>
    <fullName>To_Period__c</fullName>
    <label>To Period</label>
    <length>18</length>
    <type>Text</type>
</CustomField>