force-app/main/default/objects/Revenue_Contract__c/recordTypes/MJE_RC.recordType-meta.xml
<RecordType>
    <fullName>MJE_RC</fullName>
    <active>true</active>
    <label>MJE RC</label>
</RecordType>