force-app/main/default/objects/Revenue_Contract__c/recordTypes/NO_RC_Transactions.recordType-meta.xml
<RecordType>
    <fullName>NO_RC_Transactions</fullName>
    <active>true</active>
    <label>NO-RC-Transactions</label>
</RecordType>