force-app/main/default/objects/Revenue_Contract__c/recordTypes/RC.recordType-meta.xml
<RecordType>
    <fullName>RC</fullName>
    <active>true</active>
    <label>RC</label>
</RecordType>