force-app/main/default/objects/Revenue_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Total_Contract_Value__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Revenue_Recognized__c</columns>
    <columns>Prior_Qtr_Revenue__c</columns>
    <columns>Current_Qtr_Revenue__c</columns>
    <columns>Next_Qtr_Revenue__c</columns>
    <columns>Revenue_Scheduled__c</columns>
    <columns>Revenue_Unscheduled__c</columns>
    <columns>Hold_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Revenue_Contract__c.NO_RC_Transactions</value>
    </filters>
    <label>All</label>
</ListView>